--- a/data/pair_without_comment.properties
+++ b/data/pair_without_comment.properties
@@ -1,6 +1,6 @@
 # PostgreSQL
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # new Line
-hibernate.connection.url=jdbc:postgresql://127.0.0.1:5432/trackstudio
+hibernate.connection.url=jdbc:postgresql://127.0.0.1:5432/trackstudio=1
 
-hibernate.connection.password=password
+hibernate.connection.password=password=
