--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
       <artifactId>postgresql</artifactId>
       <version>42.5.3</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
